add tingxie.html & set up app store link

--- a/index.html
+++ b/index.html
@@ -19,25 +19,14 @@
       <header>
         <h1>时习之</h1>
         <p>您的学习小帮手</p>
-        <p class="view"><a href="https://github.com/shixizhi/shixizhi">View the Project on GitHub <small>shixizhi/shixizhi</small></a></p>
-        <ul>
-          <li><a href="#">Download <strong>听写助手</strong></a></li>
-        </ul>
       </header>
       <section>
-        <h3>听写助手</h3>
-
 <p>
-现在的小学生上学，基本上是孩子和家长一起上的。家庭作业需要家长协助，并且批阅、改错，才算完成。每天孩子还没回家，老师的短信会已经发到手机上了，今天的作业是什么什么，有的学校不发短信，那孩子一回家，家长就要看今天备忘录上写的作业是什么。
-</p>
-<p>
-学生的家庭作业中最常见的一个就是默写或者说听写，其他的作业，比如数学题、英语题甚至作文，都可以等孩子做完了，家长去检查一下。不用一定陪在身边，但是听写就不一样了，一定要有一个人在旁边说，孩子不看书的情况下才能真正完成这个作业。为了能在家长忙的时候孩子也能做默写的作业，我也想过不少方法，比如默写语文生词，就是让他抄一遍拼音在一张纸上，默写的时候基本就变成看拼音写词语，默写英语生词，就先把汉语写在一旁，这个也基本能解决问题，但是孩子的工作量也大了不少，本来他们对现在的作业量就有意见。
+学而时习之，不亦乐乎。这是孔子的一句名言，我们从小就学习这句话，通常的解释都是学习了然后经常复习，是一件很愉快的事。直到有一天，另外一种解释震惊了我，这种解释中，时，不是经常的意思，而是时机的意思，学习后有机会实践，这才不亦乐乎。重复炒冷饭有什么乐趣呢。
 </p>
 </p>
-听写助手app解决了这个问题，这个应用基本模仿老师给学生默写的方式，老师说一个词，停下来，等学生写好了，说一声“ok”或者“下一个”，老师会报下一个词语，这样能让孩子写的时候尽可能的处于一种自然的状态。声音要录入到app中，录入的话，也只要按正常语速读完一遍，词语之间稍作停顿，即可。这个应用会把录下来的声音自动的分割成单个词语，在学生的语音控制下逐个播放出来。
+<a href="app/tingxie.html">听写</a>
 </p>
-
-
       </section>
     </div>
     <footer>
