add sharing description
听写应用描述修改

--- a/app/tingxie.html
+++ b/app/tingxie.html
@@ -33,8 +33,12 @@
 </p>
 听写助手app解决了这个问题，这个应用基本模仿老师给学生默写的方式，老师说一个词，停下来，等学生写好了，说一声“ok”或者“下一个”，老师会报下一个词语，这样能让孩子写的时候尽可能的处于一种自然的状态。声音要录入到app中，录入的话，也只要按正常语速读完一遍，词语之间稍作停顿，即可。这个应用会把录下来的声音自动的分割成单个词语，在学生的语音控制下逐个播放出来。
 </p>
-
-
+<p>
+可以把录制的单词文件保存，并记录这次录制内容的描述，下次复习的时候，可以直接从已存文件中挑选出来直接用。不需要的文件可以在列表中删除，也可以修改文件的描述。
+</p>
+<p>
+支持分享功能，录好的听写可以通过微信、邮件、短信 iMessage 分享给你的小伙伴们啦，人人为我，我为人人！！建一个微信群或者邮件组和你的同学们轮流值日吧。
+</p>
       </section>
     </div>
     <footer>
